<resources>
    <string name="app_name">News Express</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cnn">CNN</string>
    <string name="newyork_times">NewYork Times</string>
    <string name="fox_new">Fox New</string>
    <string name="sky_news">Sky News</string>
    <string name="upcoming">UpComing</string>
    <string name="aljazera">AlJazera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fox_news">FOX NEWS</string>
    <string name="bbc">BBC</string>
    <string name="hindustan_times">Hindustan Times</string>
    <string name="toi">TOI</string>
    <string name="jagran">Jagran</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
</resources>