<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newapp.ui.CNN.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_sky"
            app:destination="@id/sky" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.newapp.ui.HT.GalleryFragment"
        android:label="@string/hindustan_times"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.newapp.ui.TOI.SlideshowFragment"
        android:label="@string/toi"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/sky"
        android:name="com.example.newapp.Fragments.Jagaran"
        android:label="@string/jagran"
        tools:layout="@layout/fragment_fox_news" />
</navigation>